--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "schema/releases_log.schema.json",
+  "$schema": "schema/releases.schema.json",
   "currentVersion": "2.4.0",
   "currentBuild": 19,
   "releaseDate": "2025-03-10",
