--- a/.github/workflows/fetch_update.yml
+++ b/.github/workflows/fetch_update.yml
@@ -22,6 +22,8 @@ on:
 jobs:
   compile_assets:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout source branch
         uses: actions/checkout@v4
