--- a/.github/workflows/fetch_update.yml
+++ b/.github/workflows/fetch_update.yml
@@ -41,12 +41,26 @@ jobs:
       - name: Compile data
         run: node fetch_list.js
 
+      - name: Checkout main branch and Pull latest changes
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          path: main_branch
+          fetch-depth: 0
+
+      - name: Copy compiled assets to main branch directory
+        run: |
+          cp compiled/* main_branch/compiled/ 
+        working-directory: ${{ github.workspace }}
+
       - name: Commit and push compiled assets to main branch
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add compiled/*.json 
+          cd main_branch 
+          git add compiled/*.json
           git diff --cached --exit-code || git commit -m "feat: Automated update of compiled LynxHub assets [skip ci]"
+          git pull --rebase 
           git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
