--- a/.github/workflows/fetch_update.yml
+++ b/.github/workflows/fetch_update.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Copy compiled assets to main branch directory
         run: |
+          mkdir -p main_branch/compiled/
           cp compiled/* main_branch/compiled/ 
         working-directory: ${{ github.workspace }}
 
